--- a/compose.yaml
+++ b/compose.yaml
@@ -26,6 +26,8 @@ services:
     command: "python -m uvicorn app:app --app-dir /app/llama_app --host 0.0.0.0 --port 5000 --reload"
     ports:
       - "5000:5000"
+    depends_on:
+      - vector_postgres
     volumes:
       - ".:/app"
 volumes:
