--- a/compose.yaml
+++ b/compose.yaml
@@ -30,8 +30,8 @@ services:
   llama-app:
     environment:
       - ENV=docker
-      - PROJECT_ID=sandbox-378304
-      - ENDPOINT_ID=4486080009093513216
+      - PROJECT_ID=${PROJECT_ID:-production-397416}
+      - ENDPOINT_ID=${ENDPOINT_ID:-8535660499029721088}
       - REGION=us-central1
       - GOOGLE_APPLICATION_CREDENTIALS_JSON=${GOOGLE_APPLICATION_CREDENTIALS_JSON}
       - LOCAL_DOCKER=true
