--- a/compose.yaml
+++ b/compose.yaml
@@ -12,6 +12,8 @@ services:
       POSTGRES_DB: postgres
     volumes:
       - pgdata:/var/lib/postgresql/data
+    networks:
+      - shared
       
   liquibase:
     image: liquibase/liquibase:4.19
@@ -22,13 +24,17 @@ services:
       - pgvector
     volumes:
       - ./database/:/liquibase/changelog/
+    networks:
+      - shared
 
   llama-app:
     environment:
       - ENV=docker
-      - PROJECT_ID=production-397416
-      - ENDPOINT_ID=8535660499029721088
+      - PROJECT_ID=${PROJECT_ID:-production-397416}
+      - ENDPOINT_ID=${ENDPOINT_ID:-8535660499029721088}
       - REGION=us-central1
+      - GOOGLE_APPLICATION_CREDENTIALS_JSON=${GOOGLE_APPLICATION_CREDENTIALS_JSON}
+      - LOCAL_DOCKER=true
     build:
       context: .
       dockerfile: docker/app.dockerfile
@@ -39,7 +45,12 @@ services:
     depends_on:
       - pgvector
     volumes:
-      - ".:/app"
-      - "/home/rita/.config/gcloud:/home/jovyan/.config/gcloud"
+      - "./:/app"
+    networks:
+      - shared
+
 volumes:
   pgdata:
+
+networks:
+  shared:
